--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>pos-discovery</module>
         <module>pos-gateway</module>
         <module>pos-delivery</module>
+        <module>pos-integration</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
